--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "animejs",
   "version": "3.0.1",
   "homepage": "http://animejs.com",
-  "repository": "juliangarnier/anime",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juliangarnier/anime.git"
+  },
   "description": "JavaScript animation engine",
   "umd:main": "lib/anime.min.js",
   "module": "lib/anime.es.js",
@@ -29,10 +32,14 @@
     "canvas"
   ],
   "devDependencies": {
+    "@types/animejs": "^2.0.2",
     "gzip-size": "^4.1.0",
     "pretty-bytes": "^4.0.2",
     "rollup": "^0.53.2",
     "rollup-plugin-buble": "^0.18.0",
     "uglify-js": "^3.3.4"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
